<resources>
    <string name="take_photo">Take Photo</string>
    <string name="start_capture">Start Capture</string>
    <string name="stop_capture">Stop Capture</string>
    <string name="app_name">Monexin</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back_button">Back Button</string>
    <string name="register">Register</string>
    <string name="personal_information_is_used_for_registration_and_validation_monexin">Personal information is used for registration and validation Monexin</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_submitting_this_application_you_confirm_that_you_are_authorized_to_share_this_information_and_agree_with_our_term_and_conditions">By submitting this application you confirm that you are authorized to share this information and agree with our Term and Conditions</string>
    <string name="login">Login</string>
    <string name="let_s_get_started_entering_income_and_expense">Let\'s get started entering income and expense</string>
    <string name="ahmet_selim_ozturk">Ahmet Selim Ozturk</string>
    <string name="sample_gmail_com">sample@gmail.com</string>
    <string name="do_you_have_an_account">Do you have an account?</string>
    <string name="my_transaction">My Transaction</string>
    <string name="transaction_back_button">Transaction Back Button</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="expense">Expense</string>
    <string name="income">Income</string>
    <string name="transaction_attachment">Transaction Attachment</string>
    <string name="optional">(Optional)</string>
    <string name="camera_icon">Camera Icon</string>
    <string name="camera">Camera</string>
    <string name="image_icon">Image Icon</string>
    <string name="image">Image</string>
    <string name="document_icon">Document Icon</string>
    <string name="document">Document</string>
    <string name="add">Add</string>
    <string name="transaction_add">Transaction Add</string>
    <string name="profile">Profile</string>
    <string name="personal_information">Personal Information</string>
    <string name="account_number">Account Number</string>
    <string name="sample_number">622214560155</string>
    <string name="joined_date">Joined Date</string>
    <string name="sample_joined_date">28 Sep 2022</string>
    <string name="name">Name</string>
    <string name="device_information">Device Information</string>
    <string name="device">Device</string>
    <string name="sample_device">Xiaomi Mi 5s</string>
    <string name="app_version">App Version</string>
    <string name="sample_app_version">2.25.0(152)</string>
    <string name="edit_button">Edit Button</string>
    <string name="sign_out">Sign Out</string>
    <string name="splash_logo">Splash Logo</string>
    <string name="expenses_incomes">Expenses-Incomes</string>
    <string name="hello_string">Hello, Selim</string>
    <string name="sample_expense_number">24,420,00</string>
    <string name="active_expense">Active Expense</string>
    <string name="add_expense_button">Add Expense Button</string>
    <string name="add_expense">Add Expense</string>
    <string name="sample_income_number">14,360,66</string>
    <string name="active_incomes">Active Incomes</string>
    <string name="add_income_button">Add Income Button</string>
    <string name="add_income">Add Income</string>
    <string name="search">Search</string>
    <string name="filter_button">Filter Button</string>
    <string name="recently_added">Recently Added</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sample_letter">S</string>
    <string name="sample_title">Settlement</string>
    <string name="sample_description">This description is example</string>
    <string name="expenses">Expenses</string>
    <string name="filter_expenses_button">Filter Expenses Button</string>
    <string name="active_expenses">Active Expenses</string>
    <string name="data">Data</string>
    <string name="clear_your_transactions">Clear your transactions</string>
    <string name="clear">Clear</string>
    <string name="app_data">App data</string>
    <string name="clear_all_transaction">Clear All Transaction</string>
    <string name="are_you_sure_do_you_wanna_clear_your_all_transactions">Are you sure do you want to clear your all transactions?</string>
    <string name="cancel">Cancel</string>
    <string name="all_time">All time</string>
    <string name="filters">Filters</string>
    <string name="best_match">Best Match</string>
    <string name="transaction_amount">Transaction Amount</string>
    <string name="min">Min</string>
    <string name="brace">-</string>
    <string name="max">Max</string>
    <string name="date_range">Date Range</string>
    <string name="min_date_calendar">Min Date Calendar</string>
    <string name="min_date">Min Date</string>
    <string name="max_date_calendar">Max Date Calendar</string>
    <string name="max_date">Max Date</string>
    <string name="filter">Filter</string>
    <string name="incomes">Incomes</string>
    <string name="transaction_detail_back_button">Transaction Detail Back Button</string>
    <string name="transaction_detail">Transaction Detail</string>
    <string name="transaction_delete_button">Transaction Delete Button</string>
    <string name="_400">400</string>
    <string name="shopping">Shopping</string>
    <string name="saturday_4_june_2021_16_20">Saturday 4 June 2021 16:20</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_industry_s">Lorem Ipsum is simply dummy text of industry\'s</string>
    <string name="attachment">Attachment</string>
    <string name="attachment_image">Attachment Image</string>
    <string name="edit">Edit</string>
    <string name="are_you_sure_do_you_wanna_sign_out">Are you sure do you want to sign out?</string>
    <string name="delete_transaction">Delete Transaction</string>
    <string name="are_you_sure_do_you_wanna_delete_transaction">Are you sure do you want to delete transaction?</string>
    <string name="delete">Delete</string>
    <string name="transaction_failed">Transaction failed</string>
    <string name="transaction_has_been_succesfully">Transaction has been successfully</string>
    <string name="taken_photo">Taken photo</string>
    <string name="accept_taken_photo">Accept taken photo</string>
    <string name="cancel_taken_photo">Cancel taken photo</string>
    <string name="close_and_open_filter_layout_button">Close and open filter layout button</string>
    <string name="no_data_image">No data image</string>
    <string name="transaction_not_found">Transaction Not Found</string>
    <string name="transaction_add_button">Transaction add button</string>
    <string name="taken_photo_delete_button">Taken photo delete button</string>
    <string name="transaction_image_not_found">Transaction Image Not Found</string>
    <string name="clear_date_range_button">Clear date range button</string>
    <string name="update_transaction">Update Transaction</string>
    <string name="sasa">Monexin</string>
    <string name="home">Home</string>
    <string-array name="bestMatchFilterList">
        <item>Descending by date</item>
        <item>Ascending by date</item>
        <item>Decreasing by amount</item>
        <item>Increasing by amount</item>
    </string-array>
</resources>