<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/transactionDetailInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/accent_4"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/transactionDetailTextBackAndDeleteButtonLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/transactionDetailBackButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/transaction_detail_back_button"
                android:focusable="true"
                android:src="@drawable/ic_arrow_back"
                app:tint="@color/white" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/cera_pro_bold"
                android:text="@string/transaction_detail"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/transactionDetailDeleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:contentDescription="@string/transaction_delete_button"
                android:focusable="true"
                android:src="@drawable/ic_delete"
                app:tint="@color/white" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/transactionDetailTextBackAndDeleteButtonLayout">

            <TextView
                android:id="@+id/transactionDetailAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cera_pro_medium"
                android:gravity="center"
                android:text="@string/_400"
                android:textColor="@color/white"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/transactionDetailTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cera_pro_medium"
                android:gravity="center"
                android:text="@string/shopping"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/transactionDetailCratedAt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cera_pro_medium"
                android:gravity="center"
                android:text="@string/saturday_4_june_2021_16_20"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>

    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nestedScrollView4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/transactionDetailInfo">

        <LinearLayout
            android:id="@+id/transactionDescriptionAndAttachmentLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp"
            app:layout_constraintTop_toBottomOf="@id/transactionDetailInfo">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cera_pro_medium"
                android:text="@string/description"
                android:textColor="@color/grey_700"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/transactionDetailDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cera_pro_medium"
                android:text="@string/lorem_ipsum_is_simply_dummy_text_of_industry_s"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@id/transactionDetailInfo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/cera_pro_medium"
                android:text="@string/attachment"
                android:textColor="@color/grey_700"
                android:textSize="16sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp">

                <ProgressBar
                    android:id="@+id/transactionImageProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:visibility="invisible" />

                <LinearLayout
                    android:id="@+id/transactionImageNotFoundLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center_horizontal"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <ImageView
                        android:contentDescription="@string/no_data_image"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_image_not_found" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/cera_pro_medium"
                        android:text="@string/transaction_image_not_found"
                        android:textColor="@color/grey_600" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/transactionImage"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:contentDescription="@string/attachment_image"
                    android:scaleType="centerCrop" />
            </RelativeLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/transactionEditButton"
                style="@style/buttons"
                android:layout_gravity="bottom"
                android:layout_marginTop="20dp"
                android:text="@string/edit"
                app:cornerRadius="12dp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>