<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_200"
    android:padding="20dp"
    tools:context=".ui.profile.view.ProfileFragment">

    <ProgressBar
        android:id="@+id/profileProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/profileTextAndEditButtonLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="@font/cera_pro_medium"
            android:text="@string/profile"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/profileEditButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/edit_button"
            android:focusable="true"
            android:src="@drawable/ic_edit" />
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/profileNestedScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/profileTextAndEditButtonLayout"
        tools:layout_editor_absoluteX="20dp">

        <LinearLayout
            android:id="@+id/profileInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cera_pro_medium"
                android:text="@string/personal_information"
                android:textColor="@color/grey_500" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/grey_200" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cera_pro_medium"
                    android:text="@string/account_number"
                    android:textColor="@color/grey_700"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/profileAccountNumberText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cera_pro_medium"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="@string/sample_number" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/grey_200" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cera_pro_medium"
                    android:text="@string/joined_date"
                    android:textColor="@color/grey_700"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/profileJoinedDateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cera_pro_medium"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="@string/sample_joined_date" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/grey_200" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cera_pro_medium"
                    android:text="@string/name"
                    android:textColor="@color/grey_700"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/profileNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cera_pro_medium"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="@string/ahmet_selim_ozturk" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/grey_200" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cera_pro_medium"
                    android:text="@string/email"
                    android:textColor="@color/grey_700"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/profileEmailText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cera_pro_medium"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="@string/sample_gmail_com" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/grey_200" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/cera_pro_medium"
                android:text="@string/device_information"
                android:textColor="@color/grey_500" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/grey_200" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cera_pro_medium"
                    android:text="@string/device"
                    android:textColor="@color/grey_700"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/profileDeviceText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cera_pro_medium"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="@string/sample_device" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/grey_200" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cera_pro_medium"
                    android:text="@string/app_version"
                    android:textColor="@color/grey_700"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/profileAppVersion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cera_pro_medium"
                    android:textAlignment="textEnd"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    tools:text="@string/sample_app_version" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/grey_200" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/cera_pro_medium"
                android:text="@string/data"
                android:textColor="@color/grey_500" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/grey_200" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/cera_pro_medium"
                    android:text="@string/app_data"
                    android:textColor="@color/grey_700"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/profileClearAppDataButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:contentDescription="@string/edit_button"
                    android:focusable="true"
                    android:fontFamily="@font/cera_pro_medium"
                    android:text="@string/clear"
                    android:textAlignment="textEnd"
                    android:textColor="@color/main_color"
                    android:textSize="16sp" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/cera_pro_medium"
                android:text="@string/clear_your_transactions"
                android:textColor="@color/grey_500" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/signOutButton"
                style="@style/buttons"
                android:layout_gravity="bottom"
                android:layout_marginTop="32dp"
                android:text="@string/sign_out"
                app:cornerRadius="12dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>