<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/signout_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cera_pro_bold"
        android:text="@string/sign_out"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/are_you_sure_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/cera_pro_medium"
        android:text="@string/are_you_sure_do_you_wanna_sign_out"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/signout_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@id/are_you_sure_text">

        <TextView
            android:id="@+id/signOutCancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/cera_pro_medium"
            android:text="@string/cancel"
            android:textAllCaps="true"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/signOutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cera_pro_medium"
            android:text="@string/clear"
            android:textAllCaps="true"
            android:textColor="@color/black" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>